# thinking-flashcards

./: .gitignore  README.md  flashcards.yaml  llm_model_config.py  pyproject.toml  quiz_app.py  quiz_common.py  quiz_mc.py  quiz_user_fr.py  quiz_user_mc.py  setup_instructions.sh
common/: quiz_utils.py
flashcards/: flashcards.yaml
src/: quiz_app.py  quiz_user_fr.py  quiz_user_mc.py
