[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-flashcards"
version = "0.1.0"
description = "An intelligent flashcard application"
authors = [
    { name = "Yoonseo Choi"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "" }
dependencies = [
    "requests >=2.31.0",
    "numpy >=1.26.0",
    "pyyaml >=6.0.0",
    "ollama >=0.5.3"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]